# freebsd-radix-userland

./: .gitignore  10M_ROUTE_ANALYSIS.md  CMakeLists.txt  FREEBSD_INTEGRATION_STATUS.md  FULL_TEST.md  HOW_TO_RUN_10M_TEST.md  LEVEL2_THREADING_SUMMARY.md  LEVEL3_KERNEL_LAND_SUM.md  Makefile  Makefile.compat  Makefile.debug  Makefile.debug-262k  Makefile.debug-large  Makefile.freebsd  Makefile.minimal  Makefile.route-api  Makefile.scale  README.md  analyze_failures  analyze_failures.c  check_boundary  check_boundary.c  debug_1m_failures.c  find_duplicates  find_duplicates.c  multiroutes.readme
src/: radix_adapter.c  radix_minimal.c  radix_stubs.c  route_lib.c
src/examples/: route_api_comprehensive.c  route_api_demo.c  route_demo.c
src/freebsd/: radix.c  radix.h  radix_userland.c  radix_userland.h
src/include/: freebsd_route_adapter.h  radix_adapter.h  radix_minimal.h  route_lib.h
src/kernel_compat/: compat_shim.c  compat_shim.h  kernel_compat.c  kernel_compat.h  opt_ddb.h  opt_inet.h  opt_inet6.h  opt_mrouting.h  opt_route.h  sys_compat.h
src/lib/: route_lib_stubs.c
src/test/: test_262k_debug.c  test_compat_minimal.c  test_framework.c  test_framework.h  test_freebsd_components.c  test_freebsd_comprehensive.c  test_freebsd_integration.c  test_main.c  test_radix.c  test_radix_concurrent.c  test_radix_debug.c  test_radix_debug_large.c  test_radix_integration.c  test_radix_minimal.c  test_radix_scale.c  test_rmlock_large.c  test_rmlock_simple.c  test_route_table.c  verify_10m_ranges  verify_10m_ranges.c
src/xnu_kernel/: xnu_freebsd_radix.c  xnu_freebsd_radix.h  xnu_rmlock_advanced.c
